...
    <string name="yes_button">Yes</string>
    <string name="cancel_button">Cancel</string>

    <!-- LIST USER DISPLAY -->
    <string name="display_text_user_list_not_decided">%s hasn\'t decided yet</string>

    <string name="incorrect_email">Incorrect Email</string>
    <string name="incorrect_username">Username not long enough</string>
    <string name="retry_button">Retry</string>
    <string name="title_activity_test">Map</string>
    <string name="no_location_message">Turn on your GPS</string>
    <string name="open_until">Open until %s</string>
    <string name="opening_soon">Opening soon</string>
    <string name="closed">Closed</string>
...
