<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/main_activity_drawer_lunch"
        android:title="@string/drawer_menu_your_lunch"
        android:icon="@drawable/baseline_restaurant_menu_24"/>
    <item
        android:id="@+id/main_activity_drawer_settings"
        android:title="@string/drawer_menu_settings"
        android:icon="@drawable/baseline_settings_black_24"/>
    <item
        android:id="@+id/main_activity_drawer_logout"
        android:title="@string/drawer_menu_logout"
        android:icon="@drawable/baseline_power_settings_new_24"/>
    </group>


</menu>