...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/really_small_margin">

            <TextView
                android:id="@+id/nav_header_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.username}"
                android:textStyle="bold"
                android:textSize="@dimen/nav_header_username_size"
                android:textColor="@color/colorTextPrimary"
                />

            <TextView
                android:id="@+id/nav_header_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.email}"
                android:textSize="@dimen/nav_header_email_size"
                android:textColor="@color/colorTextPrimary"/>
        </LinearLayout>
...
